# wagtail-websockets

./: MANIFEST.in  README.md  pyproject.toml  setup.py
content_locking/: apps.py  consumers.py  routing.py
content_locking/templates/wagtailadmin/: base.html
content_locking/templates/wagtailadmin/pages/: content_locking.js  edit.html
