[tool.poetry]
name = "wagtail-websockets"
version = "0.1.0"
description = ""
authors = ["Michael Hearn <git@mikehearn.net>"]

[tool.poetry.dependencies]
python = "^3.7"
channels = "^2.1"
django = "^2.1"
channels_redis = "^2.3"


[tool.poetry.dev-dependencies]
python-language-server = {version = "^0.22.0",extras = ["all"]}
